- Fixed the horizontal alignment

--- a/style/style.css
+++ b/style/style.css
@@ -257,6 +257,7 @@ p.view3 {
   /*float: center;*/
   position: absolute;
   bottom: 0;
+  transform: translate(50%);
 }
 
 #sliderDiv {
